[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/Character.gd" type="Script" id=1]
[ext_resource path="res://assets/character.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 9.70516

[node name="Character" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
speed = null

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="actionTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="HitTween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="timeout" from="actionTimer" to="." method="_on_actionTimer_timeout"]


